# sphinx-bug-11220

./: .gitignore  README.md  pyproject.toml
_ext/hello_world/: module_a.py  module_b.py
